--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ google-pasta==0.2.0
 grpcio==1.47.0
 h5py==3.7.0
 idna==3.3
+imbalanced-learn==0.9.1
 importlib-metadata==4.12.0
 ipython==8.4.0
 jedi==0.18.1
@@ -42,6 +43,7 @@ packaging==21.3
 pandas==1.4.3
 parso==0.8.3
 pathspec==0.9.0
+paxplot==0.1.4b0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
@@ -52,6 +54,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pydot==1.4.2
 Pygments==2.12.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -61,6 +64,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 scikit-learn==1.1.2
 scipy==1.9.0
+seaborn==0.11.2
 six==1.16.0
 stack-data==0.3.0
 tensorboard==2.9.1
